package io.pedrini.expsplit.domain.group.model;

public enum MembershipStatus {
    PENDING,
    ACCEPTED
}
