package io.pedrini.expsplit.domain.group.model;

public enum Role {
    OWNER,
    MEMBER
}
